# bevy-shader-test

./: Cargo.toml  README.md  bevy-shader-test.js  index.html
.github/workflows/: deploy.yml
assets/shaders/: custom_mat.wgsl
site/: index.html
src/: custom_mat.rs  main.rs
