[package]
name = "bevy-shader-test"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["HyperCodec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
