[package]
name = "bevy-shader-test"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["HyperCodec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"

[dependencies]
async-std = "1.12.0"
bevy = "0.12"
bevy_egui = "0.24.0"
rfd = "0.12.1"
